--- a/game/export_presets.cfg
+++ b/game/export_presets.cfg
@@ -24,7 +24,7 @@ texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
-binary_format/architecture="x86_64"
+binary_format/architecture="x86_32"
 codesign/enable=false
 codesign/timestamp=true
 codesign/timestamp_server_url=""
@@ -32,8 +32,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="res://icon.png"
+application/console_wrapper_icon="res://icon.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../dist/GD24horas.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -82,7 +82,7 @@ encrypt_directory=false
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../dist/GD24horas.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -125,8 +125,8 @@ custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
 application/icon=""
-application/icon_interpolation=4
-application/bundle_identifier=""
+application/icon_interpolation=0
+application/bundle_identifier="frask.gd.a24horas"
 application/signature=""
 application/app_category="Games"
 application/short_version=""
@@ -216,7 +216,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../dist/GD24horas.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -230,14 +230,14 @@ gradle_build/use_gradle_build=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
-architectures/armeabi-v7a=false
+architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
 package/unique_name="com.example.$genname"
-package/name=""
+package/name="Geometry Dash en 24 horas by Frask"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
@@ -245,9 +245,9 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/main_192x192="res://icon.png"
+launcher_icons/adaptive_foreground_432x432="res://icon.png"
+launcher_icons/adaptive_background_432x432="res://icon.png"
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 screen/immersive_mode=true
